# aoc-2020

./: .gitignore  generate_dir.sh
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day08/src/vm/: mod.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
template/src/: main.rs
